tests/paczka1/fuzzy1/76840286.err
Error in line 3: aeUx A463 80,8
Error in line 7: Zlk1N2ZF S497 47,4
Error in line 19: Zlk1N2ZF A537 20,9
Error in line 15: aeUx A537 68,9
Error in line 23: 3rajR4Z A537 1,3
Error in line 22: aeUx S245 79,2
